--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -5,15 +5,9 @@ banner: "https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743952341/Sacro_Imp
 short_description: "Nação do Minecraft"
 ---
 
-> Kamchatskiy foi sobre isso, foi sobre vocês que construíram um país, uma cidade, um povo e uma
-> cultura sem medo, não em nome do seu país, mas em nome de nossa diversão, pois somos todos amigos.
-> Então, por que não fazemos isso novamente?
-
-_&mdash; `Don Ravi I`_
-
 **Frigustell**, ou o **Sacro Império de Frigustell**, é uma monarquia semi-constitucional soberana
 existente desde o Cup SMP 1, sucessora da **[República Democrática de
-Kamchatskiy]**(República_Democrática_de_Kamchatskiy).
+Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
 
 <QuickFacts>
     <CountrySymbols
@@ -145,106 +139,21 @@ latinas "frigus" e "stella", "frio" e "estrela" respectivamente; a autoria do no
 (atual nome da companhia frigustelliana de matéria prima e energia), Stegellida, Stellida,
 Bergstern, Konrad e diversos outros nomes.
 
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743983263/PDP_tal0oq.png"
-    description="Antiga logo do Partido Democrático Popular (PDP)"
-/>
-
 # História
-
-## Versão Canônica
-
-Após a queda de Kamchatskiy no final do [Don SMP 2](Don_SMP_2), decorrente de um plano elaborado por
-[Emmeria](Emmeria), [Nonna Van Doren](Nonna_Van_Doren) e [Nordenbürgen](Nordenbürgen) para a
-desestabilização de Kamchatskiy, os cidadãos se agruparam em um último plebiscito para uma nova
-união com a [República Parlamentarista de Waydines](Waydines) que terminou com resultado favorável à
-uma união e novamente se uniram à Waydines, após 3 meses de independência.
-
-Os cidadãos [Anni](Anni_Memeiro), [Banumuru](São_Bruno), [Mochi](Mochi_Kiki), Emmanuel, Nylverion,
-Stevo e [Don Ravi](Don_Ravi), ex-cidadãos de Kamchatskiy (exceto Stevo), juntaram-se e criaram um
-partido que seguia a mesma ideologia e linha política do antigo partido majoritário de Kamchatskiy,
-o [Partido dos Trabalhadores de Kamchatskiy](Partido_dos_Trabalhadores_Kamchatskianos)
-(<code>PTK</code>), também conhecido como "Peteca". Sua visão para Waydines era, em caso fortuno,
-transformar Waydines em uma nova Kamchatskiy por meio de políticas e legislações, porém, com o
-fervor nacionalístico e uma abstinência total por parte dos membros do PDP durante as eleições para
-o Parlamento waydineense, foi cogitado mais a ideia de criar um novo pais "do zero", aprendendo com
-os erros do passado e fazendo uma nação melhor, como dito por Don Ravi.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743952352/Frigustell_ruty4e.png"
-    description="Primeira bandeira de Frigustell, na época, Reinado de Frigustell."
-/>
-
-Foi então, que no dia 16 de Abril de 2023, Frigustell, organizado em uma monarquia absolutista, com
-a religião oficial do estado sendo uma versão do cristianismo mais tendenciosa para o Catolicismo,
-formalmente declarou sua independência, após ter reunido todos os seus cidadãos em seu servidor do
-Discord e ter se preparado para quaisquer possíveis retaliações, o que aconteceu.
-
-Quase imediatamente após a declaração de independência, [Cupertino](Cupertino_Kurt) rejeita a
-declaração e ameaça uma guerra contra Frigustell, por meio de um jogo no Roblox, que se passaria em
-Mitterfurt e teria as próprias armas dos países participantes da guerra (Frigustell vs. Waydines,
-Nordenbürgen, com possível neutralidade de Emmeria).
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743993874/Captura_de_tela_de_2025-04-06_23-44-10_orsxg0.png"
-    description="Primeira página da declaração de independência frigustelliana."
-/>
-
-Passado um tempo, Cupertino aceitou a independência frigustelliana e escreveu uma resposta pacífica
-para a independência frigustelliana, que foi publicada pelo Google Docs
-<a href="https://docs.google.com/document/d/1gwOxgadw-m5B3heslKJGgWT13XLcLGYOSQdMMLY0lLw/edit?tab=t.0">neste
-link</a>. A resposta à Frigustell foi aceita por Don Ravi, que desde então trabalhou junto com
-Cupertino para uma relação amigável entre ambos os estados.
-
-## Pacto de Mitterfurt
-
-O Pacto de Mitterfurt foi uma confederação ratificada e assinada pelo Sacro Império de Frigustell
-(então Reinado de Frigustell), República Parlamentarista de Waydines e Kaiserreich de Nordenbürgen
-(atual Xogunato Ryusei) no dia 23 de Julho de 2023. Foi precursora da União Elisiana, tendo
-princípios similares a ela, como por exemplo: A defesa mútua, cooperação econômica e diplomática, um
-sistema monetário próprio e livre circulação de pessoas entre países.
-
-Similarmente à União Elisiana, o Pacto de Mitterfurt possuia sua própria câmara legislativa, chamado
-apenas como "Parlamento", nunca houve representantes eleitos para a câmara legislativa da
-confederação.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745547945/c4b45794-66a3-4a6d-996d-40d047cbf725.png"
-    description="Resposta de Don Ravi I à ameaça de Portugueskiy."
-/>
-
-O Pacto de Mitterfurt foi desfeito após o dia 25 de Novembro do mesmo ano, com a saída de Frigustell
-no dia 24, que procurava seguir seu próprio caminho fora da confederação. Após a saída de
-Frigustell, a kaiserina de Nordenbürgen, Portugueskiy, envia uma ameaça ad hominem a Frigustell,
-chamando-o de um péssimo e incompetente administrador de servidor, tanto devido ao Don SMP 2 quanto
-à uma votação não-oficial, feita pelo Cupertino que ocorreu no Cup SMP 1, para novo dono do servidor
-do Discord e também ameaçou à Frigustell uma guerra caso tivesse atitude beligerante. O texto
-original da ameaça foi perdido, tendo apenas a resposta que Don Ravi I deu à Nordenbürgen.
-
-## Sacro Império de Frigustell
-
-No dia 8 de Junho 2024, devido ao rápido crescimento em atividade e populacional de Frigustell, Don
-Ravi I renomeia Frigustell, de Sacro Reinado de Frigustell para Sacro Império de Frigustell, mudando
-principalmente sua bandeira, de uma mais contemporânea que relevava a temática montanhosa de
-Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745549356/2025-03-15_21.35.27_yuwepw.png"
-    description="Complexo do WTC"
-/>
-
-Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
-Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
-de Bruno.
 
 ## História Alternativa
 
-A história alternativa de Frigustell é baseada em uma adaptação dos fatos reais de Waydines para uma
-versão mais romantizada e, principalmente, inspirada na Bíblia Sagrada, é contada por Don Ravi por
-meio dos livros canonizados do divinismo e em uma revisão da história real, por enquanto, apenas
-pelo Diário de Ravi Mikélagos. A história alternativa retrata Frigustell como um país sagrado,
-similarmente à Israel no velho testamento bíblico, com o povo atual sendo refugiados de Waydines
-após uma perseguição religiosa massiva pelas autoridades religiosas ortodoxas do madeísmo.
+<Picture 
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748299433/d86eec19-b0d4-4f45-9c6e-d60dff57d940.png" 
+    description="Capa do Diário de Ravi Mikélagos, escrito por Don Ravi I."
+/>
+
+A história alternativa de Frigustell é baseada em uma adaptação dos fatos reais do universo de 
+Waydines para uma versão mais romantizada e, principalmente, inspirada na Bíblia Sagrada. É contada 
+por Don Ravi por meio dos livros canonizados do divinismo e em uma revisão da história real, por 
+enquanto, apenas pelo Diário de Ravi Mikélagos. A história alternativa retrata Frigustell como um 
+país sagrado, similarmente à Israel no velho testamento bíblico, com o povo atual sendo refugiados 
+de Waydines após uma perseguição religiosa massiva pelas autoridades religiosas ortodoxas do madeísmo.
 
 Nesta versão, contada pelo Diário de Ravi Mikélagos, a Igreja de Bruno, administrada pela família de
 Ravi Mikélagos (Alfredo Mikélagos, Hermína Facchin e Bruno Mikélagos Facchin) crescia rapidamente em
@@ -326,15 +235,23 @@ que, tanto para a nação quanto para o divinismo, é uma data de suma importân
 
 ## História Real
 
-Após os eventos do Don SMP 2, a
-[República Democrática de Kamchatskiy](República_Democrática_de_Kamchatskiy) se encontrava em uma
+> Kamchatskiy foi sobre isso, foi sobre vocês que construíram um país, uma cidade, um povo e uma
+> cultura sem medo, não em nome do seu país, mas em nome de nossa diversão, pois somos todos amigos.
+> Então, por que não fazemos isso novamente?
+
+_&mdash; `Don Ravi I`_
+
+Após os eventos do Don SMP 2 &mdash; um plano elaborado por
+[Emmeria](Emmeria), [Nonna Van Doren](Nonna_Van_Doren) e [Nordenbürgen](Nordenbürgen) para a
+desestabilização de Kamchatskiy &mdash; a
+[República Democrática](República_Democrática_de_Kamchatskiy) se encontrava em uma
 fraquíssima união, mesmo entre os membros mais nacionalistas, o que consequentemente levou a um
 plebiscito nacional, feito pelo próprio presidente de Kamchatskiy, Don Raviollone, para uma
-reintegração com Waydines, refletindo uma mudança de ideais após a
-r[Revolução de Outubro](Guerra_Civil_de_Waydines), que possuia caráter soberano e nacionalista.
-Apesar disso, o plebiscito aconteceu em grande parte por influência direta de
-[Cupertino](Cupertino_Kurt), que convenceu o então presidente Don Raviollone a fazer um plebiscito
-pela união, o mesmo convenceu a população de Kamchatskiy a se juntar.
+reintegração com Waydines, refletindo uma mudança de ideais após a [Revolução de Outubro](Guerra_Civil_de_Waydines), 
+que possuia caráter soberano e nacionalista. Apesar disso, o plebiscito aconteceu em grande parte 
+por influência direta de [Cupertino](Cupertino_Kurt), que convenceu o então presidente 
+Don Raviollone a fazer um plebiscito pela união, o mesmo convenceu a população de Kamchatskiy a se 
+juntar.
 
 Dez dias após o fim do Don SMP 2, no dia 20 de Janeiro de 2023 a República Democrática de
 Kamchatskiy se unia novamente com Waydines, permanecendo desta maneira por três meses até a criação
@@ -347,11 +264,17 @@ rivalidade entre si próprio e Don Raviollone, o que fez com que fosse criado o
 [Partido Democrático Popular](Partido_Democrático_Popular) (<code>PDP</code>), também de caráter
 esquerdista, mas mais extremo que o partido Social Democrata, de natureza centro-esquerda.
 
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743983263/PDP_tal0oq.png"
+    description="Logo do extinto Partido Democrático Popular (PDP)"
+/>
+
 O Partido Democrático Popular representava a continuidade de Kamchatskiy dentro de Waydines, apesar
-de não ter seu próprio estado. Sua política e ideologia era similar ao antigo PTK e todos os seus
-membros foram ex-cidadãos de Kamchatskiy, o que contribuiu para mais um novo movimento secessionista
-dentro da república; com o principal motivo sendo mais conflitos de interesses entre ambos os
-partidos, que possuiam interesses distintos em relação a república.
+de não ter seu próprio estado. Sua política e ideologia era similar ao antigo 
+[PTK](Partido_dos_Trabalhadores_Kamchatskianos) e todos os seus membros foram ex-cidadãos de 
+Kamchatskiy, o que contribuiu para mais um novo movimento secessionistadentro da república; com o 
+principal motivo sendo mais conflitos de interesses entre ambos os partidos, que possuiam interesses
+distintos em relação a república.
 
 Os sociais-democratas de Waydines buscavam construir uma república que criava um extenso sistema de
 bem-estar social em par com políticas econômicas de natureza capitalista, enquanto os socialistas
@@ -373,15 +296,15 @@ independência de Frigustell e envia uma carta resposta à independência de Fri
 que a república buscaria relações amigáveis com o reinado e buscaria acordos benéficos para ambas as
 nações.
 
-Nesse momento, Frigustell pode ter chance de sobreviver pacificamente, sem a necessidade de uma
+Nesse momento, Frigustell pôde ter chance de sobreviver pacificamente, sem a necessidade de uma
 força armada poderosa para garantir sua independência ou apoio internacional. Nos meses seguintes,
 surgia o Pacto de Mitterfurt, uma confederação criada entre Frigustell, Waydines e Nordenbürgen, o
-que garantia legitimidade para o Reinado de Frigustell, que, a este momento, procurava relações
-pacíficas e cooperativas com todos os países.
+que garantiu legitimidade para o Reinado de Frigustell, que, a este momento, procurava relações
+pacíficas e cooperativas com todos os países e seu lugar na geopolítica.
 
 Passado o tempo, foi se reunindo lentamente todos os membros antigos de Kamchatskiy, e logo
-Frigustell se via ao mesmo patamar de seu antecessor, com mais de 20 membros em seu país, e com a
-participação de membros novos como [Jeanne](Don_Jeanne_Hart), Yuri, [Mateus]() e
+Frigustell se via ao mesmo patamar de seu antecessor, com mais de 20 membros em seu país e com a
+participação de membros novos como [Jeanne](Don_Jeanne_Hart), Yuri, Mateus e
 [Kaio](Don_Kaio_DeLuna) (dessa vez, como cidadão de fato), que trocaram a antiga cidadania dos
 [Los Bozos](Los_Bozos). Foi durante este período que Frigustell saia do Pacto de Mitterfurt,
 buscando a criação de seu próprio bloco econômico e que se auto-declarava um império, criando-se
@@ -391,14 +314,54 @@ e criação de bens de consumo para outros mercados de produtos e consumidores, 
 internacionais; uma mudança grande comparada com a antiga política de direitos de investimento em
 território nacional.
 
+## Pacto de Mitterfurt
+
+O Pacto de Mitterfurt foi uma confederação ratificada e assinada pelo então Reinado de Frigustell, 
+República Parlamentarista de Waydines e Kaiserreich de Nordenbürgen no dia 23 de Julho de 2023. 
+Antecessora da União Elisiana, com princípios similares a ela: a defesa mútua, cooperação econômica 
+e diplomática, um sistema monetário próprio e livre circulação de pessoas entre países.
+
+Similarmente à União Elisiana, o Pacto de Mitterfurt possuia sua própria câmara legislativa, chamada
+apenas como "Parlamento", nunca houve representantes eleitos para a câmara legislativa da
+confederação.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745547945/c4b45794-66a3-4a6d-996d-40d047cbf725.png"
+    description="Resposta de Don Ravi I à ameaça de Portugueskiy."
+/>
+
+O Pacto de Mitterfurt foi desfeito após o dia 25 de Novembro do mesmo ano, com a saída de Frigustell
+no dia 24, que procurava seguir seu próprio caminho fora da confederação. Após a saída de
+Frigustell, a kaiserina Portugueskiy de Nordenbürgen, envia uma ameaça ad hominem a Frigustell,
+chamando-o de um péssimo e incompetente administrador de servidor, tanto devido ao Don SMP 2 quanto
+à uma votação não-oficial feita por Cupertino, que ocorreu no Cup SMP 1, para novo dono do servidor
+do Discord, assim como ameaçou à Frigustell uma guerra caso tivesse atitude beligerante. O texto
+original da ameaça foi perdido, sobrando apenas a resposta de Don Ravi I à Nordenbürgen.
+
+## Sacro Império de Frigustell
+
+No dia 8 de Junho 2024, devido ao rápido crescimento em atividade e populacional de Frigustell, Don
+Ravi I renomeia Frigustell, de Sacro Reinado de Frigustell para Sacro Império de Frigustell, mudando
+principalmente sua bandeira, de uma mais contemporânea que relevava a temática montanhosa de
+Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745549356/2025-03-15_21.35.27_yuwepw.png"
+    description="Complexo do WTC"
+/>
+
+Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
+Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
+de Bruno.
+
 ## Governo
 
 Frigustell passou a ter o sistema unitário de organização territorial, diferente de Kamchatskiy, os
 estados, agora chamados de províncias, não possuem mais suas próprias constituições, leis e código
 penal; agora possuem natureza municipal e contam com uma prefeitura composta quase exlusivamente de
-cleros da Igreja de Bruno. Pelo lado bom, essa mudança de sistema mais se igualou à mão de obra
-disponível para tomarem estas funções; uma melhora significativa em comparação ao sistema extenso,
-subdimensionado e supérfluo da República Democrática de Kamchatskiy.
+cleros da Igreja de Bruno. Essa mudança de sistema mais se igualou à mão de obra disponível para 
+tomarem estas funções; uma melhora significativa em comparação ao sistema extenso, subdimensionado e
+supérfluo da República Democrática de Kamchatskiy.
 
 Diferentemente de Kamchatskiy, Frigustell adota um imperador como líder da nação, e além do
 imperador, o poder executivo se separa em ministérios, como o Ministério da Economia, Ministério da
@@ -415,7 +378,7 @@ escolhidos pelo deus divinista para serem líderes; o monarca atual de Frigustel
 &mdash; também é o segundo em comando da Igreja de Bruno, com [São Bruno](São_Bruno) também fazendo
 parte da Dinastia Ravileence.
 
-Frigustell possui um sistema judiciário, organizado em sua constituição, porém, não possui pessoas o
+Frigustell possui um sistema judiciário organizado em sua constituição, porém, não possui pessoas o
 suficiente para ocuparem os postos existentes.
 
 Apesar de ser uma monarquia semi-constitucional, o sacro império não possui uma constituição pronta,
@@ -423,15 +386,15 @@ com boa parte das leis e regimentos sendo ditados pelo imperador da nação.
 
 ## Forças Armadas
 
-Fora sua política, que se expandia para acomodar os novos cidadãos do império, Frigustell começa a
-expandir seu suas forças aramdas e forças especiais, assinalando cidadãos para postos específicos e
-padronizando equipamentos entre suas forças. É criada a força aérea e o
-[Esquadrão Flecha](Esquadrão_Flecha), que está ainda em formação.
-
 <Picture
     image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748290150/vindodecima_jqz4hn.png"
     description="Cartaz de propaganda ilustrando o WM-01 voando no céu, com o brasão de Frigustell ao fundo."
 />
+
+Fora sua política, que se expandia para acomodar os novos cidadãos do império, Frigustell começa a
+expandir seu suas forças aramdas e forças especiais, assinalando cidadãos para postos específicos e
+padronizando equipamentos entre suas forças. É criada a força aérea e o
+[Esquadrão Flecha](Esquadrão_Flecha), que está ainda em formação.
 
 As forças armadas procuravam criar seus próprios modelos de tanques de guerra e aviões, porém, com
 os SMPs não contando com mods capazes de fazer isso, seu desenvolvimento foi adiado. Apesar da
@@ -471,13 +434,14 @@ histórias alternativas e comemora a salvação e conversão em massa milagrosa 
 frigustellianos e waydineense durante uma batalha sangrenta, de acordo com o diário de Ravi
 Mikélagos, que conta esse evento com detalhes:
 
-> o formato do sol aparentava se distorcer no céu e no meio dele surgia uma estrela de oito pontas,
+> O formato do sol aparentava se distorcer no céu e no meio dele surgia uma estrela de oito pontas,
 > a luz solar não queimava mais a vista e todos os soldados olhavam hiptonizados ao sol, que dizia
 > para todos os soldados pararem de lutar, logo muitos soldados começaram a chorar e se ajoelharam
 > ao chão virados em direção ao sol, muitos confessavam seu arrependimento por pecar e, após esse
 > evento ter passado, todos os soldados enviados por Waydines a essa batalha haviam se convertido ao
-> divinismo e mais da metade tornaram-se cidadãos frigustellianos. O Sacro Império de Frigustell
-> adotou este milagre solar como seu símbolo nacional, dada sua grande importância, estando presente
-> tanto em seu brasão quanto em suas diversas bandeiras e logotipos.
+> divinismo e mais da metade tornaram-se cidadãos frigustellianos.
 
 _&mdash; `Diário de Ravi Mikélagos`_
+
+O Sacro Império de Frigustell adotou este milagre solar como seu símbolo nacional, dada sua grande 
+importância, estando presente tanto em seu brasão quanto em suas diversas bandeiras e logotipos.
