--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -35,8 +35,8 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
     <tr>
         <td>Governo</td>
         <td>
-            Monarquia Semi-Constitucional,{" "}
-            <a href="https://pt.wikipedia.org/wiki/Democracia_direta">Democracia Direta</a> e{" "}
+            Monarquia Semi-Constitucional,
+            <a href="https://pt.wikipedia.org/wiki/Democracia_direta">Democracia Direta</a> e
             <a href="https://pt.wikipedia.org/wiki/Estado_unit%C3%A1rio">unitária</a>
         </td>
     </tr>
